--- a/frontend-auth/index.html
+++ b/frontend-auth/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Authentication - Synkro</title>
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   </head>
-  <body class="bg-gray-50 min-h-screen">
+  <body class="min-h-screen">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
